--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,11 @@
 <h2>Promise</h2>
 <p>{{ promise}}</p>
 
-<h2>Observable</h2>
-<p></p>
+<!-- <h2> Observable </h2> -->
+<!-- <p>{{observable}}</p> -->
+
+<h2>Names List:</h2>
+<ul>
+  <li *ngFor="let name of nameList">{{ name }}</li>
+</ul>
 
